--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <section class="span7 offset1">
-        <h3>- Latest Post</h3>
+        <h3>- Latest post</h3>
 
         {% for article in articles_page.object_list %}
             <h2>
