--- a/templates/base.html
+++ b/templates/base.html
@@ -5,12 +5,13 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
     <head>
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <meta name="description" content="">
+        <meta name="description" content="James Cooke back-end developer experienced in PHP and Python.">
         <meta name="author" content="@Jamesfublo and @PaulRichardson">
 
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="{{ SITEURL }}/theme/droidstrap.css">
-        <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Droid+Sans+Mono|Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+
 
         <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
 
@@ -29,12 +30,13 @@
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
+        <div class="fake">
+        </div>
         <div class="container">
             <div class="row">
                 <header class="span3">
-                    <h1 class="blogtitle"><small>
-                        <a href="{{ SITEURL }}">{{ SITENAME }}</a>
-                        {{ TAGLINE }}</small>
+                    <h1 class="blogtitle">
+                        <a href="{{ SITEURL }}"><img id="profileimg" src="http://userserve-ak.last.fm/serve/126/5888928.jpg" alt="{{ SITENAME }}" ></a>{{ SITENAME }}
                     </h1>
                     <nav>
                         <ul>
