--- a/static/droidstrap.css
+++ b/static/droidstrap.css
@@ -8,6 +8,10 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 400;
 }
 
+h2.space-above {
+    margin-top:1em;
+}
+
 p {
     font-family: 'Droid Sans', sans-serif;
 }
