--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
         <meta name="author" content="@Jamesfublo and @PaulRichardson">
 
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/2.3.1/css/bootstrap-responsive.min.css">
         <link rel="stylesheet" href="{{ SITEURL }}/theme/droidstrap.css">
         <link href='http://fonts.googleapis.com/css?family=Droid+Sans:400,700|Droid+Sans+Mono|Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
 
@@ -30,8 +31,7 @@
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
-        <div class="fake">
-        </div>
+        <div class="fake"> </div>
         <div class="container">
             <div class="row">
                 <header class="span3">
