--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
         {% endif %}
 
         {% block head %}
-            <title>{% block title %}{{ SITENAME }}{% endblock title %}</title>
+        <title>{% block title %}{{ SITENAME }} // {{ TAGLINE }}{% endblock title %}</title>
             <meta charset="utf-8" />
             <meta name="viewport" content="width=device-width">
         {% endblock head %}
