--- a/static/droidstrap.css
+++ b/static/droidstrap.css
@@ -18,6 +18,9 @@ h2.small {
     margin-bottom: 0;
 }
 
+div.article-content h2 {
+    font-size: 1.7em;
+}
 h2.space-above {
     margin-top:1em;
 }
@@ -71,6 +74,21 @@ div.fake {
 .blogtitle {
         font-size: 18px;
 }
+
+/* Pagination */
+div.pagination {
+    margin-top: 35px;
+}
+div.pagination-left {
+    float:left;
+}
+div.pagination-middle {
+    text-align:center;
+}
+div.pagination-right {
+    float: right;
+}
+
 /* Footer */
 footer {
         margin:40px 0px 20px 0px;
