--- a/templates/pagination.html
+++ b/templates/pagination.html
@@ -1,26 +1,34 @@
 {% if DEFAULT_PAGINATION %}
-<p class="paginator">
-    {% if articles_page.has_previous() %}
-        {% if page_name == "index" %}
-            {% if articles_page.previous_page_number() == 1 %}
-                <a href="{{ SITEURL }}/{{ page_name }}.html">
+
+<div class="row ">
+
+    <div class="pagination span7">
+
+
+        <div class="pagination-left">
+            {% if articles_page.has_previous() %}
+                {% if articles_page.previous_page_number() == 1 %}
+                    <a href="{{ SITEURL }}/{{ page_name }}.html">
+                {% else %}
+                    <a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.previous_page_number() }}.html">
+                {% endif %}
+                &larr;&nbsp;Newer posts</a>
             {% else %}
-                <a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.previous_page_number() }}.html">
+                &nbsp;
             {% endif %}
-        {% else %}
-            {% if articles_page.previous_page_number() == 1 %}
-                <a href="{{ SITEURL }}/{{ page_name }}/index.html">
-            {% else %}
-                <a href="{{ SITEURL }}/{{ page_name }}/index{{ articles_page.previous_page_number() }}.html">
+        </div>
+
+        <div class="pagination-right">
+            {% if articles_page.has_next() %}
+                <a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.next_page_number() }}.html">Older posts&nbsp;&rarr;</a>
             {% endif %}
-        {% endif %}&larr;&nbsp;Newer posts</a>
-    {% endif %}
-    {% if articles_page.has_next() %}
-        {% if page_name == "index" %}
-            <a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.next_page_number() }}.html">
-        {% else %}
-            <a href="{{ SITEURL }}/{{ page_name }}/index{{ articles_page.next_page_number() }}.html">
-        {% endif %}Older posts&nbsp;&rarr;</a>
-    {% endif %}
-</p>
+        </div>
+        <div class="pagination-middle">
+            <p>Page {{ articles_page.number }} / {{ articles_paginator.num_pages }}</p>
+        </div>
+
+    </div>
+
+</div>
+
 {% endif %}
