Adding a profile image setting.

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
             <div class="row">
                 <header class="span3">
                     <h1 class="blogtitle">
-                        <a href="{{ SITEURL }}"><img id="profileimg" src="http://userserve-ak.last.fm/serve/126/5888928.jpg" alt="{{ SITENAME }}" ></a>{{ SITENAME }}
+                        <a href="{{ SITEURL }}"><img id="profileimg" src="{{ PROFILE_IMG_URL }}" alt="{{ SITENAME }}" ></a>{{ SITENAME }}
                     </h1>
                     <nav>
                         <ul>
