--- a/static/droidstrap.css
+++ b/static/droidstrap.css
@@ -1,3 +1,8 @@
+body {
+    font-size: 18px;
+    line-height: 26px;
+}
+
 h1, h2, h3, h4, h5, h6 {
     color: inherit;
     font-family: 'Droid Serif',serif;
@@ -25,6 +30,10 @@ p {
     font-family: 'Droid Sans', sans-serif;
 }
 
+li {
+    line-height: 24px;
+}
+
 cite {
     background: #eeeeee;
     font-family: 'Droid Sans Mono', Monaco, Menlo, Consolas, 'Courier New', monospace;
@@ -46,19 +55,12 @@ nav ul {
         margin: 30px 0 0 0;
         font-family: 'Droid Serif', serif;
 }
+
 nav li {
         padding: 0px;
         margin: 0 0 10px 0;
 }
-div.fake {
-        bottom: 0;
-        left: 0;
-        position: fixed;
-        top: 0;
-        width: 32.755%;
-        background: #f6f6f6;
-        z-index: -1;
-}
+
 #profileimg {
         border-radius: 50px;
         -webkit-border-radius: 50px;
@@ -67,6 +69,7 @@ div.fake {
         width: 100px;
         height: 100px;
 }
+
 .blogtitle {
         font-size: 18px;
 }
