--- a/templates/category.html
+++ b/templates/category.html
@@ -1,3 +1,3 @@
 {% extends "index.html" %}
-{% block title %}{{ category }} category // {{ super() }}{% endblock title %}
+{% block title %}{{ category|striptags }} category // {{ super() }}{% endblock title %}
 {% block pagetitle %}Posts in '{{ category }}'{% endblock pagetitle %}
