--- a/templates/tag.html
+++ b/templates/tag.html
@@ -1,3 +1,3 @@
 {% extends "index.html" %}
-{% block title %}{{ tag }} tag // {{ super() }}{% endblock title %}
+{% block title %}{{ tag|striptags }} tag // {{ super() }}{% endblock title %}
 {% block pagetitle %}Posts tagged '{{ tag }}'{% endblock pagetitle %}
