Adjust disqus links to use https

--- a/templates/article.html
+++ b/templates/article.html
@@ -59,11 +59,11 @@
                         var dsq = document.createElement('script');
                         dsq.type = 'text/javascript';
                         dsq.async = true;
-                        dsq.src = 'http://{{ DISQUS_SITENAME }}.disqus.com/embed.js';
+                        dsq.src = 'https://{{ DISQUS_SITENAME }}.disqus.com/embed.js';
                         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
                     })();
                 </script>
-                <noscript>Please enable JavaScript to view <a href="http://disqus.com/?ref_noscript">comments</a>.</noscript>
+                <noscript>Please enable JavaScript to view <a href="https://disqus.com/?ref_noscript">comments</a>.</noscript>
             </div>
         {% endif %} 
     </section>
